--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+  <meta charset="utf-8">
   <meta name="description" content="Udacity Responsive Images course project" />
   <meta name="author" content="//samdutton.com">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
@@ -70,7 +70,7 @@
 
   </article>
 
-  <img style="max-width: 100%" src="images_src/fixed/flourish.png">
+  <!--<img style="max-width: 100%" src="images_src/fixed/flourish.png">-->
   <!--
   Flourish credit: http://pixabay.com/en/flourish-line-border-decoration-31609/
   -->
