--- a/index.html
+++ b/index.html
@@ -21,16 +21,18 @@
 </head>
 
 <body>
+  <header>
+    <span class="logo, entypo-rss"></span>
+    <h1>My responsive blog</h1>
 
-  <h1>My responsive blog</h1>
-
+  </header>
   <article>
 
     <img src="images/still_life-1440_large_2x.jpg">
 
     <h2>My story</h2>
 
-    <p>I love cheese, especially manchego swiss. <img src="images_src/fixed/smiley_face.png"> Fromage queso jarlsberg cheesy feet emmental cottage cheese camembert de normandie bocconcini. Cottage cheese everyone loves cauliflower cheese rubber cheese squirty cheese halloumi cow fondue. Bocconcini cheese and biscuits everyone loves fondue red leicester st. agur blue cheese rubber cheese ricotta. Cheesy grin mozzarella.</p>
+    <p>I love cheese, especially manchego swiss. 😀 Fromage queso jarlsberg cheesy feet emmental cottage cheese camembert de normandie bocconcini. Cottage cheese everyone loves cauliflower cheese rubber cheese squirty cheese halloumi cow fondue. Bocconcini cheese and biscuits everyone loves fondue red leicester st. agur blue cheese rubber cheese ricotta. Cheesy grin mozzarella.</p>
 
     <img src="images/horses-1440_large_2x.jpg">
 
@@ -74,9 +76,20 @@
   <!--
   Flourish credit: http://pixabay.com/en/flourish-line-border-decoration-31609/
   -->
+  <hr>
 
-  <br>
-  <a href="//github.com/udacity/responsive-images/tree/master/project/start" title="View source for this page on GitHub" id="viewSource">View source on GitHub</a>
+  <footer>
 
+    <br>
+
+    <a href="//github.com/udacity/responsive-images/tree/master/project/start" title="View source for this page on GitHub" id="viewSource">View source on GitHub</a>
+
+    <ul class="social">
+      <li><a href class="zocial-twitter"> Twitter</a></li>
+      <li><a href class="zocial-digg"> Digg</a></li>
+      <li><a href class="zocial-facebook"> Facebook</a></li>
+      <li><a href class="zocial-googleplus"> Google+</a></li>
+    </ul>
+  </footer>
 </body>
 </html>
